--- a/index.html
+++ b/index.html
@@ -1,104 +1,130 @@
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>christina</title>
+<html class="no-js" lang="en">
+<head>
+  <!-- title and meta -->
+  <meta charset="utf-8">
+  <meta content="width=device-width,initial-scale=1.0" name="viewport">
+  <meta content="description" name="Christina's page!">
 
-    <!--Google Roboto Slabo Font-->
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+  <title>christina zhu</title>
+  <link rel="shortcut icon" href="favicon.jpg" type="image/jpg">
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- css -->
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/jumbotron.css" rel="stylesheet">
+  <!-- icons -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+  <!-- js -->
+  <script src="js/modernizr.js"></script>
+</head>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+<body>
+  <div class="wrapper">
+    <main>
+      <section class="module content">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-6 col-md-3">
+              <!-- Avatar --> 
+              <a href="#" class="thumbnail">
+                <img src="http://i.imgur.com/gdYcXc2.jpg">
+              </a>
+            </div>
 
-  <body>
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-
-      <div class="row">
-        <div class="col-xs-6 col-md-3">
-        <!-- Avatar --> 
-          <a href="#" class="thumbnail">
-            <img src="http://i.imgur.com/gdYcXc2.jpg">
-          </a>
-        </div>
-
-        <h1>CHRISTINA</h1>
-        <p>i am christina, i have many skills and talents but programming is not one of them (look at this paragraph for an example),,swag</p>
-        <button type="button" class="btn btn-default btn-lg">
-          <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> 
-          talk to me
-        </button>
-      </div>
-    </div>
-
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <h1> PROJECTS</h1>
-        <p> absolutely fucking nothing</p>
-
-        <div class="media">
-
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
-            </a>
-          </div>
-
-          <div class="media-body">
-            <h4 class="media-heading">hypothetical project number one aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h4>
-            um i promise i'll make stuff soon sorry i am useless lmao
+            <h2>CHRISTINA</h2>
+            <p>hi! i go to uc davis. i like to program and pet dogs. </p>
+            <button type="button" class="btn btn-default btn-lg">
+              <i class="fa fa-envelope fa-lg"></i> 
+            </button>
+            <button type="button" class="btn btn-default btn-lg">
+              <i class="fa fa-twitter fa-lg"></i> 
+            </button>
+            <button type="button" class="btn btn-default btn-lg">
+              <i class="fa fa-linkedin fa-lg"></i> 
+            </button>
+            <button type="button" class="btn btn-default btn-lg">
+              <i class="fa fa-github fa-lg"></i> 
+            </button>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="row">
-
-        <div class="col-md-4">
-          <h2>OVER 300 CONFIRMED HEADSHOTS</h2>
-          <p>swag swag swag</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      <section class="module parallax parallax-1">
+        <div class="container">
+          <h1>work</h1>
         </div>
-        
-      </div>
+      </section>
 
-      <hr>
+      <section class="module content">
+        <div class="container">
+          <div class="row">
+            <h1> PROJECTS</h1>
+            <p> absolutely fucking nothing</p>
 
-      <footer>
-        <p>&copy; Company 2014</p>
-      </footer>
-    </div> <!-- /container -->
+            <div class="media">
+
+            <!-- Project 1-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">hypothetical project number one aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h4>
+                um i promise i'll make stuff soon sorry i am useless lmao
+              </div><br><br>
+
+            <!-- Project 2-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">cute rilakkumas</h4>
+                what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
+              </div><br><br>
+
+            <!-- Project 3-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">hmmm</h4>
+                i'll make something cool i promise
+              </div><br><br>
+
+            </div>
+          </div>
+        </section>
+
+        <section class="module parallax parallax-2">
+          <div class="container">
+            <h1>contact</h2>
+          </div>
+        </section>
+
+        <section class="module content">
+          <div class="container">
+            <h2>call me beep me if you wanna reach me</h2>
+            <p></p>
+          </div>
+        </section>
+
+      </main><!-- /main -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </div><!-- /#wrapper -->
+
   </body>
-</html>
+  </html>
