Added links, cleaned up
Need to add more content and projects

--- a/index.html
+++ b/index.html
@@ -31,24 +31,18 @@
           <div class="row">
             <div class="col-xs-6 col-md-3">
               <!-- Avatar --> 
-              <a href="#" class="thumbnail">
-                <img src="http://i.imgur.com/gdYcXc2.jpg">
-              </a>
             </div>
 
             <h2>CHRISTINA</h2>
             <p>hi! i go to uc davis. i like to program and pet dogs. </p>
             <button type="button" class="btn btn-default btn-lg">
-              <i class="fa fa-envelope fa-lg"></i> 
+              <a href="mailto:cszhu@ucdavis.edu"><i class="fa fa-envelope fa-lg"></i></a>
             </button>
             <button type="button" class="btn btn-default btn-lg">
-              <i class="fa fa-twitter fa-lg"></i> 
+              <a href="http://twitter.com/cszhu"><i class="fa fa-twitter fa-lg"></i></a> 
             </button>
             <button type="button" class="btn btn-default btn-lg">
-              <i class="fa fa-linkedin fa-lg"></i> 
-            </button>
-            <button type="button" class="btn btn-default btn-lg">
-              <i class="fa fa-github fa-lg"></i> 
+              <a href="http://github.com/cszhu"><i class="fa fa-github fa-lg"></i></a>
             </button>
           </div>
         </div>
@@ -64,7 +58,7 @@
         <div class="container">
           <div class="row">
             <h1> PROJECTS</h1>
-            <p> absolutely fucking nothing</p>
+            <p> Coming soon! </p>
 
             <div class="media">
 
@@ -76,8 +70,8 @@
               </div>
 
               <div class="media-body">
-                <h4 class="media-heading">hypothetical project number one aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h4>
-                um i promise i'll make stuff soon sorry i am useless lmao
+                <h4 class="media-heading">Temporary</h4>
+                Text text text text text
               </div><br><br>
 
             <!-- Project 2-->
@@ -88,8 +82,8 @@
               </div>
 
               <div class="media-body">
-                <h4 class="media-heading">cute rilakkumas</h4>
-                what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
+                <h4 class="media-heading">Cute template</h4>
+                Should I put my class projects here?
               </div><br><br>
 
             <!-- Project 3-->
@@ -101,7 +95,7 @@
 
               <div class="media-body">
                 <h4 class="media-heading">hmmm</h4>
-                i'll make something cool i promise
+                I should make something cool.
               </div><br><br>
 
             </div>
@@ -116,7 +110,7 @@
 
         <section class="module content">
           <div class="container">
-            <h2>call me beep me if you wanna reach me</h2>
+            <h2>Call me beep me if you wanna reach me</h2>
             <p></p>
           </div>
         </section>
