--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
               <!-- Avatar --> 
             </div>
 
-            <h2>CHRISTINA</h2>
-            <p>hi! i go to uc davis. i like to program and pet dogs. </p>
+            <center><h2>CHRISTINA</h2>
+            <p>hi! i go to uc davis. i like to program and pet dogs. </p></center>
             <button type="button" class="btn btn-default btn-lg">
               <a href="mailto:cszhu@ucdavis.edu"><i class="fa fa-envelope fa-lg"></i></a>
             </button>
