Centered for real this time

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
 
             <center><h2>CHRISTINA</h2>
-            <p>hi! i go to uc davis. i like to program and pet dogs. </p></center>
+            <p>hi! i go to uc davis. i like to program and pet dogs. </p>
             <button type="button" class="btn btn-default btn-lg">
               <a href="mailto:cszhu@ucdavis.edu"><i class="fa fa-envelope fa-lg"></i></a>
             </button>
@@ -42,8 +42,8 @@
               <a href="http://twitter.com/cszhu"><i class="fa fa-twitter fa-lg"></i></a> 
             </button>
             <button type="button" class="btn btn-default btn-lg">
-              <a href="http://github.com/cszhu"><i class="fa fa-github fa-lg"></i></a>
-            </button>
+              <a href="http://github.com/cszhu"><i class="fa fa-github fa-lg" href="http://github.com/cszhu"></i></a>
+            </button></center> 
           </div>
         </div>
       </section>
