figured out how to link things

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <center><h2>CHRISTINA</h2>
             <p>hi! i go to uc davis. i like to program and pet dogs. </p>
             <button type="button" class="btn btn-default btn-lg">
-              <a href="mailto:cszhu@ucdavis.edu"><i class="fa fa-envelope fa-lg"></i></a>
+              <i class="fa fa-envelope fa-lg" href="mailto:cszhu@ucdavis.edu"></i>
             </button>
             <button type="button" class="btn btn-default btn-lg">
-              <a href="http://twitter.com/cszhu"><i class="fa fa-twitter fa-lg"></i></a> 
+              <i class="fa fa-twitter fa-lg" href="http://twitter.com/cszhu"></i> 
             </button>
             <button type="button" class="btn btn-default btn-lg">
-              <a href="http://github.com/cszhu"><i class="fa fa-github fa-lg" href="http://github.com/cszhu"></i></a>
+              <i class="fa fa-github fa-lg" href="http://github.com/cszhu"></i>
             </button></center> 
           </div>
         </div>
