--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
             <center><h2>CHRISTINA</h2>
             <p>hi! i go to uc davis. i like to program and pet dogs. </p>
-            <button type="button" class="btn btn-default btn-lg">
-              <i class="fa fa-envelope fa-lg" href="mailto:cszhu@ucdavis.edu"></i>
+            <button type="button" class="btn btn-default btn-lg" href="mailto:cszhu@ucdavis.edu">
+              <i class="fa fa-envelope fa-lg"></i>
             </button>
-            <button type="button" class="btn btn-default btn-lg">
-              <i class="fa fa-twitter fa-lg" href="http://twitter.com/cszhu"></i> 
+            <button type="button" class="btn btn-default btn-lg" href="http://twitter.com/cszhu">
+              <i class="fa fa-twitter fa-lg"></i> 
             </button>
-            <button type="button" class="btn btn-default btn-lg">
-              <i class="fa fa-github fa-lg" href="http://github.com/cszhu"></i>
+            <button type="button" class="btn btn-default btn-lg" href="http://github.com/cszhu">
+              <i class="fa fa-github fa-lg"></i>
             </button></center> 
           </div>
         </div>
