--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html class="no-js" lang="en">
+
 <head>
   <!-- title and meta -->
   <meta charset="utf-8">
@@ -18,9 +19,6 @@
 
   <!-- icons -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-  <!-- js -->
-  <script src="js/modernizr.js"></script>
 </head>
 
 <body>
@@ -28,22 +26,24 @@
     <main>
       <section class="module content">
         <div class="container">
-          <div class="row">
-            <div class="col-xs-6 col-md-3">
-              <!-- Avatar --> 
-            </div>
-
-            <center><h2>CHRISTINA</h2>
-            <p>hi! i go to uc davis. i like to program and pet dogs. </p>
-            <button type="button" class="btn btn-default btn-lg" href="mailto:cszhu@ucdavis.edu">
-              <i class="fa fa-envelope fa-lg"></i>
-            </button>
-            <button type="button" class="btn btn-default btn-lg" href="http://twitter.com/cszhu">
-              <i class="fa fa-twitter fa-lg"></i> 
-            </button>
-            <button type="button" class="btn btn-default btn-lg" href="http://github.com/cszhu">
-              <i class="fa fa-github fa-lg"></i>
-            </button></center> 
+          <div class="row1">
+            <center>
+              <div class="avatar-frame"><img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10968383_10205984660518532_937950666017015053_n.jpg?oh=80eecea22627345fc051c523371d970a&oe=55833572&__gda__=1435281657_951b53186d71329356c8911ac6a00889"></div>
+              <h2>CHRISTINA</h2>
+              <p>Hi! I'm a Computer Science major with a minor in Managerial Economics. I go to UC Davis!</p>
+              <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="btn btn-default btn-lg">
+                <i class="fa fa-envelope fa-lg"></i>
+              </button></a> 
+              <a href="http://twitter.com/cszhu"><button type="button" class="btn btn-default btn-lg">
+                <i class="fa fa-twitter fa-lg"></i> 
+              </button></a>
+              <a href="http://www.linkedin.com/in/christinaszhu"><button type="button" class="btn btn-default btn-lg">
+                <i class="fa fa-linkedin fa-lg"></i> 
+              </button></a>
+              <a href="https://github.com/cszhu"><button type="button" class="btn btn-default btn-lg">
+                <i class="fa fa-github fa-lg"></i> 
+              </button></a>
+            </center>
           </div>
         </div>
       </section>
@@ -57,47 +57,90 @@
       <section class="module content">
         <div class="container">
           <div class="row">
+
+            <div class="col-md-6">
+            <h1> EXPERIENCE</h1>
+              <div class="media">
+
+                <!-- Project 1-->
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
+                  </a>
+                </div>
+
+                <div class="media-body">
+                  <h4 class="media-heading">hypothetical project number one </h4>
+                  um i promise i'll make stuff soon sorry i am useless lmao
+                </div><br><br>
+
+                <!-- Project 2-->
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
+                  </a>
+                </div>
+
+                <div class="media-body">
+                  <h4 class="media-heading">cute rilakkumas</h4>
+                  what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
+                </div><br><br>
+
+                <!-- Project 3-->
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
+                  </a>
+                </div>
+
+                <div class="media-body">
+                  <h4 class="media-heading">hmmm</h4>
+                  i'll make something cool i promise
+                </div>
+            </div>
+            </div>
+
+            <div class="col-md-6">
             <h1> PROJECTS</h1>
-            <p> Coming soon! </p>
+              <div class="media">
 
-            <div class="media">
+                <!-- Project 1-->
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
+                  </a>
+                </div>
 
-            <!-- Project 1-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
-                </a>
+                <div class="media-body">
+                  <h4 class="media-heading">hypothetical project number one </h4>
+                  um i promise i'll make stuff soon sorry i am useless lmao
+                </div><br><br>
+
+                <!-- Project 2-->
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
+                  </a>
+                </div>
+
+                <div class="media-body">
+                  <h4 class="media-heading">cute rilakkumas</h4>
+                  what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
+                </div><br><br>
+
+                <!-- Project 3-->
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
+                  </a>
+                </div>
+
+                <div class="media-body">
+                  <h4 class="media-heading">hmmm</h4>
+                  i'll make something cool i promise
+                </div>
+                <br><br>
               </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">Temporary</h4>
-                Text text text text text
-              </div><br><br>
-
-            <!-- Project 2-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">Cute template</h4>
-                Should I put my class projects here?
-              </div><br><br>
-
-            <!-- Project 3-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">hmmm</h4>
-                I should make something cool.
-              </div><br><br>
-
             </div>
           </div>
         </section>
@@ -105,20 +148,20 @@
         <section class="module parallax parallax-2">
           <div class="container">
             <h1>contact</h2>
-          </div>
-        </section>
+            </div>
+          </section>
 
-        <section class="module content">
-          <div class="container">
-            <h2>Call me beep me if you wanna reach me</h2>
-            <p></p>
-          </div>
-        </section>
+          <section class="module content">
+            <div class="container">
+              <h2>call me beep me if you wanna reach me</h2>
+              <p></p>
+            </div>
+          </section>
 
-      </main><!-- /main -->
+        </main><!-- /main -->
 
 
-    </div><!-- /#wrapper -->
+      </div><!-- /#wrapper -->
 
-  </body>
-  </html>
+    </body>
+    </html>
