--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="row1">
             <center>
-              <div class="avatar-frame"><img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10968383_10205984660518532_937950666017015053_n.jpg?oh=80eecea22627345fc051c523371d970a&oe=55833572&__gda__=1435281657_951b53186d71329356c8911ac6a00889"></div>
+              <div class="avatar-frame"><img src="./demo/_small/1.jpg"></div>
               <h2>CHRISTINA</h2>
               <p>Hi! I'm a Computer Science major with a minor in Managerial Economics. I go to UC Davis!</p>
               <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="btn btn-default btn-lg">
