hi trying to make my pic work lol

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="row1">
             <center>
-              <div class="avatar-frame"><img src="./demo/_small/1.jpg"></div>
+              <div class="avatar-frame"><img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg?oh=40859ed4f2241f81d9172dadfe9cf28f&oe=562FC347"></div>
               <h2>CHRISTINA</h2>
               <p>Hi! I'm a Computer Science major with a minor in Managerial Economics. I go to UC Davis!</p>
               <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="btn btn-default btn-lg">
