Added another section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
         </div>
       </section>
 
+      <section class="module parallax parallax-0">
+        <div class="container">
+          <h1>about</h1>
+        </div>
+      </section>
+
+      <section class="module content">
+        <div class="container">
+          <div class="row1">
+          HEY
+          </div>
+        </div>
+      </section>
+
       <section class="module parallax parallax-1">
         <div class="container">
           <h1>work</h1>
