--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <section class="module content">
         <div class="container">
           <div class="row1">
-          HEY
+          <a href="#" class="btn btn-default btn-circle"><i class="fa fa-home fa-lg"></i></a>
+
           </div>
         </div>
       </section>
