--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <section class="module content">
         <div class="container">
           <div class="row1">
-          <a href="#" class="btn btn-default btn-circle"><i class="fa fa-home fa-lg"></i></a>
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-home fa-stack-1x"></i></a>
 
           </div>
         </div>
