--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
       <section class="module content">
         <div class="container">
           <div class="row1">
+          <span class="fa-stack fa-lg">
           <i class="fa fa-circle fa-stack-2x"></i>
-          <i class="fa fa-home fa-stack-1x"></i></a>
-
+          <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
+          </span>
           </div>
         </div>
       </section>
