--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="module content">
         <div class="container">
           <div class="row1">
-          <span class="fa-stack fa-lg">
+          <span class="fa-stack fa-4x">
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
           </span>
