--- a/index.html
+++ b/index.html
@@ -66,8 +66,16 @@
           <br>
           <span class="fa-stack fa-3x">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
+            <i class="fa fa-code fa-inverse fa-stack-1x"></i></a>
           </span>
+          languages I know and stuff
+          <br>
+          <span class="fa-stack fa-3x">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
+          </span>
+          random fact
+          <br>
 
 
           </div>
