adding more icons

--- a/index.html
+++ b/index.html
@@ -63,20 +63,27 @@
             <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
           </span>
           Hi 
+
+          <br>
+          <span class="fa-stack fa-3x">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-book fa-inverse fa-stack-1x"></i></a>
+          </span>
+          education
+
           <br>
           <span class="fa-stack fa-3x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-code fa-inverse fa-stack-1x"></i></a>
           </span>
           languages I know and stuff
+
           <br>
           <span class="fa-stack fa-3x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
           </span>
           random fact
-          <br>
-
 
           </div>
         </div>
