--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
       <section class="module content">
         <div class="container">
           <div class="row1">
+          <div class="col-md-6">
+
           <!--icons and stuff-->
           <span class="fa-stack fa-3x">
             <i class="fa fa-circle fa-stack-2x"></i>
@@ -84,7 +86,7 @@
             <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
           </span>
           random fact
-
+          </div>
           </div>
         </div>
       </section>
