adding columns to icon tab

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
           </span>
-          Hi 
+          Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi aaaajlkjlksdfjsdfsdjfslkjflsdkjfksdjflsjfdlskj
 
           <br>
           <span class="fa-stack fa-3x">
