adding columns to icon tab

--- a/index.html
+++ b/index.html
@@ -57,36 +57,40 @@
       <section class="module content">
         <div class="container">
           <div class="row1">
-          <div class="col-md-6">
+            <div class="col-md-6">
 
-          <!--icons and stuff-->
-          <span class="fa-stack fa-3x">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
-          </span>
-          Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi aaaajlkjlksdfjsdfsdjfslkjflsdkjfksdjflsjfdlskj
+              <!--icons and stuff-->
+              <span class="fa-stack fa-3x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
+              </span>
+              hi i am from california haha dank
 
-          <br>
-          <span class="fa-stack fa-3x">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-book fa-inverse fa-stack-1x"></i></a>
-          </span>
-          education
+              <br>
+              <span class="fa-stack fa-3x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-book fa-inverse fa-stack-1x"></i></a>
+              </span>
+              education
 
-          <br>
-          <span class="fa-stack fa-3x">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-code fa-inverse fa-stack-1x"></i></a>
-          </span>
-          languages I know and stuff
+              <br>
+              <span class="fa-stack fa-3x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-code fa-inverse fa-stack-1x"></i></a>
+              </span>
+              languages I know and stuff
 
-          <br>
-          <span class="fa-stack fa-3x">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
-          </span>
-          random fact
+              <br>
+              <span class="fa-stack fa-3x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
+              </span>
+              random fact
+            </div>
           </div>
+
+          <div class="col-md-6"> 
+            PICTURE??? PICTURE HERE
           </div>
         </div>
       </section>
@@ -102,7 +106,7 @@
           <div class="row">
 
             <div class="col-md-6">
-            <h1> EXPERIENCE</h1>
+              <h1> EXPERIENCE</h1>
               <div class="media">
 
                 <!-- Project 1-->
@@ -140,11 +144,11 @@
                   <h4 class="media-heading">hmmm</h4>
                   i'll make something cool i promise
                 </div>
-            </div>
+              </div>
             </div>
 
             <div class="col-md-6">
-            <h1> PROJECTS</h1>
+              <h1> PROJECTS</h1>
               <div class="media">
 
                 <!-- Project 1-->
