adding columns to icon tab

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
 
           <div class="col-md-6"> 
-            PICTURE??? PICTURE HERE
+            <img src="http://i.imgur.com/ddHrL7j.jpg">
           </div>
         </div>
       </section>
