adding columns to icon tab

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
           </div>
 
           <div class="col-md-6"> 
-            <img src="http://i.imgur.com/ddHrL7j.jpg">
+            <img src="http://i.imgur.com/ddHrL7j.jpg" class="img-thumbnail">
           </div>
+
         </div>
       </section>
 
