--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
               </span>
-              random fact
+              random fact ~~insert javascript here~~
             </div>
           </div>
 
           <div class="col-md-6"> 
-            <img src="http://i.imgur.com/ddHrL7j.jpg" class="img-thumbnail">
+            <img src="https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11326706_860343760681167_500649553_n.jpg" class="img-thumbnail">
           </div>
 
         </div>
