adding columns to icon tab

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
               </span>
               languages I know and stuff
 
+              <span class="fa-stack fa-3x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-trophy fa-inverse fa-stack-1x"></i></a>
+              </span>
+              ~~~ awards ~~~
+
               <br>
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -89,7 +95,7 @@
             </div>
           </div>
 
-          <div class="col-md-6"> 
+          <div class="col-md-5"> 
             <img src="https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11326706_860343760681167_500649553_n.jpg" class="img-thumbnail">
           </div>
 
