added music page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="wrapper">
     <main>
-      <section class="module content">
+      <section class="module header">
         <div class="container">
           <div class="row1">
             <center>
@@ -50,47 +50,54 @@
 
       <section class="module parallax parallax-0">
         <div class="container">
-          <h1>about</h1>
+          <h1>about</h1>  
         </div>
       </section>
 
       <section class="module content">
         <div class="container">
           <div class="row1">
-            <div class="col-md-6">
+            <div class="col-md-3">
 
               <!--icons and stuff-->
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
               </span>
-              hi i am from california haha dank
+              Home
 
               <br>
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-book fa-inverse fa-stack-1x"></i></a>
               </span>
-              education
+              Education
 
               <br>
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-code fa-inverse fa-stack-1x"></i></a>
               </span>
-              languages I know and stuff
+              Languages
 
               <br>
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
               </span>
-              random fact ~~insert javascript here~~
+              Random Fact
             </div>
           </div>
           <br>
-          <div class="col-md-5"> 
-            <img src="https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11326706_860343760681167_500649553_n.jpg" class="img-thumbnail">
+          <div class="col-md-6"> 
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
+          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
           </div>
 
         </div>
