--- a/music.html
+++ b/music.html
@@ -80,7 +80,7 @@
           <li class="list-group-item"> <b>caroline's playlist</b>
           <div class="btn-group pull-right">
             <button type="button" class="btn btn-default btn-xs pull-right dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <span class="caret"></span>
+              <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span> <span class="caret"></span>
             </button>
             <ul class="dropdown-menu pull-right">
               <li><a href="#">add song</a></li>
@@ -127,7 +127,7 @@
           <li class="list-group-item"> <b>krish's playlist</b>
           <div class="btn-group pull-right">
             <button type="button" class="btn btn-default btn-xs pull-right dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <span class="caret"></span>
+              <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span> <span class="caret"></span>
             </button>
             <ul class="dropdown-menu pull-right">
               <li><a href="#">add song</a></li>
