--- a/music.html
+++ b/music.html
@@ -71,7 +71,19 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <center><h1>pennapps fellows mixtapes</h1></center>
+    <center><h1>pennapps fellows mixtapes
+    <div class="btn-group">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span> <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">new playlist</a></li>
+        <li><a href="#">share board</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#">delete board</a></li>
+      </ul></h1>
+      </div>
+    </center>
     <br>
     <div class="col-lg-12">
     <div class="row">
