--- a/index.html
+++ b/index.html
@@ -25,198 +25,235 @@
   <div class="wrapper">
     <main>
       <section class="module header">
-        <div class="container">
-          <div class="row1">
-            <center>
-              <div class="avatar-frame"><img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg?oh=40859ed4f2241f81d9172dadfe9cf28f&oe=562FC347"></div>
-              <h2>CHRISTINA</h2>
-              <p>Hi! I'm a Computer Science major with a minor in Managerial Economics. I go to UC Davis!</p>
-              <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="btn btn-default btn-lg">
-                <i class="fa fa-envelope fa-lg"></i>
-              </button></a> 
-              <a href="http://twitter.com/cszhu"><button type="button" class="btn btn-default btn-lg">
-                <i class="fa fa-twitter fa-lg"></i> 
-              </button></a>
-              <a href="http://www.linkedin.com/in/christinaszhu"><button type="button" class="btn btn-default btn-lg">
-                <i class="fa fa-linkedin fa-lg"></i> 
-              </button></a>
-              <a href="https://github.com/cszhu"><button type="button" class="btn btn-default btn-lg">
-                <i class="fa fa-github fa-lg"></i> 
-              </button></a>
-            </center>
-          </div>
-        </div>
-      </section>
+        <div class="indexPageInfo"> <center>
+          <div class="avatar-frame"><img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg?oh=40859ed4f2241f81d9172dadfe9cf28f&oe=562FC347"></div>
+          <h2>CHRISTINA</h2>
+          <p>Hi! I'm a Computer Science major with a minor in Managerial Economics. I go to UC Davis!</p>
+          <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="btn btn-default btn-lg">
+            <i class="fa fa-envelope fa-lg"></i>
+          </button></a> 
+          <a href="http://twitter.com/cszhu"><button type="button" class="btn btn-default btn-lg">
+            <i class="fa fa-twitter fa-lg"></i> 
+          </button></a>
+          <a href="http://www.linkedin.com/in/christinaszhu"><button type="button" class="btn btn-default btn-lg">
+            <i class="fa fa-linkedin fa-lg"></i> 
+          </button></a>
+          <a href="https://github.com/cszhu"><button type="button" class="btn btn-default btn-lg">
+            <i class="fa fa-github fa-lg"></i> 
+          </button></a>
+        </center>
+      </div>
+    </section>
 
-      <section class="module parallax parallax-0">
-        <div class="container">
-          <h1>about</h1>  
-        </div>
-      </section>
+    <section class="module parallax parallax-0">
+      <div class="container">
+        <h1>about</h1>  
+      </div>
+    </section>
 
-      <section class="module content">
-        <div class="container">
-          <div class="row1">
-            <div class="col-md-3">
+    <section class="module content">
+      <div class="container">
 
-              <!--icons and stuff-->
-              <span class="fa-stack fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
-              </span>
-              Home
 
-              <br>
+      <div class="myBox">
+        <p class="myBoxTxt">hello</p>
+      </div>
+
+      <div class="myBox">
+              <div class="col-sm-2">
+                <span class="fa-stack fa-3x">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
+                </span>
+              </div>
+
+              <div class="col-sm-4">
+                <p class="myBoxTxt">Home
+                aaaaaaaaaaaaaaaaaA AAAa aa AAAAA</p>
+              </div>
+
+            </div><!--/col-->
+
+        <div class="col-sm-6 col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-body">
+
+              <div class="col-sm-2">
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-book fa-inverse fa-stack-1x"></i></a>
               </span>
-              Education
+              </div>
 
-              <br>
+              <div class="col-sm-4">
+                <p>Education</p>
+              </div>
+
+            </div>
+          </div><!--/panel--> 
+        </div><!--/col-->
+
+        </div> <!--/row-->
+
+        <div class="col-sm-6 col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-body">
+
+              <div class="col-sm-2">
               <span class="fa-stack fa-3x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-code fa-inverse fa-stack-1x"></i></a>
               </span>
-              Languages
+              </div>
 
-              <br>
+              <div class="col-sm-4">
+                <p>Languages</p>
+              </div>
+
+            </div>
+          </div><!--/panel--> 
+        </div><!--/col-->
+
+        <div class="col-sm-6 col-xs-6">
+          <div class="panel panel-default">
+            <div class="panel-body">
+
+              <div class="col-sm-2">
               <span class="fa-stack fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-random fa-inverse fa-stack-1x"></i></a>
-              </span>
-              Random Fact
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-wrench fa-inverse fa-stack-1x"></i></a>
+            </span>
+
+              </div>
+
+              <div class="col-sm-4">
+                <p>Tools</p>
+              </div>
+
+            </div>
+          </div><!--/panel--> 
+        </div><!--/col-->  
+
+          </div>
+        </div>
+        <br>
+      </div>
+    </section>
+
+    <section class="module parallax parallax-1">
+      <div class="container">
+        <h1>work</h1>
+      </div>
+    </section>
+
+    <section class="module content">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-md-6">
+            <h1> EXPERIENCE</h1>
+            <div class="media">
+
+              <!-- Project 1-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">hypothetical project number one </h4>
+                um i promise i'll make stuff soon sorry i am useless lmao
+              </div><br><br>
+
+              <!-- Project 2-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">cute rilakkumas</h4>
+                what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
+              </div><br><br>
+
+              <!-- Project 3-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">hmmm</h4>
+                i'll make something cool i promise
+              </div>
             </div>
           </div>
-          <br>
-          <div class="col-md-6"> 
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          AAAAAA aa a a a aa a a aaaaa a aaaa <br>
-          </div>
 
+          <div class="col-md-6">
+            <h1> PROJECTS</h1>
+            <div class="media">
+
+              <!-- Project 1-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">hypothetical project number one </h4>
+                um i promise i'll make stuff soon sorry i am useless lmao
+              </div><br><br>
+
+              <!-- Project 2-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">cute rilakkumas</h4>
+                what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
+              </div><br><br>
+
+              <!-- Project 3-->
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
+                </a>
+              </div>
+
+              <div class="media-body">
+                <h4 class="media-heading">hmmm</h4>
+                i'll make something cool i promise
+              </div>
+              <br><br>
+            </div>
+          </div>
         </div>
       </section>
 
-      <section class="module parallax parallax-1">
+      <section class="module parallax parallax-2">
         <div class="container">
-          <h1>work</h1>
-        </div>
-      </section>
-
-      <section class="module content">
-        <div class="container">
-          <div class="row">
-
-            <div class="col-md-6">
-              <h1> EXPERIENCE</h1>
-              <div class="media">
-
-                <!-- Project 1-->
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
-                  </a>
-                </div>
-
-                <div class="media-body">
-                  <h4 class="media-heading">hypothetical project number one </h4>
-                  um i promise i'll make stuff soon sorry i am useless lmao
-                </div><br><br>
-
-                <!-- Project 2-->
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
-                  </a>
-                </div>
-
-                <div class="media-body">
-                  <h4 class="media-heading">cute rilakkumas</h4>
-                  what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
-                </div><br><br>
-
-                <!-- Project 3-->
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
-                  </a>
-                </div>
-
-                <div class="media-body">
-                  <h4 class="media-heading">hmmm</h4>
-                  i'll make something cool i promise
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-6">
-              <h1> PROJECTS</h1>
-              <div class="media">
-
-                <!-- Project 1-->
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
-                  </a>
-                </div>
-
-                <div class="media-body">
-                  <h4 class="media-heading">hypothetical project number one </h4>
-                  um i promise i'll make stuff soon sorry i am useless lmao
-                </div><br><br>
-
-                <!-- Project 2-->
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
-                  </a>
-                </div>
-
-                <div class="media-body">
-                  <h4 class="media-heading">cute rilakkumas</h4>
-                  what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
-                </div><br><br>
-
-                <!-- Project 3-->
-                <div class="media-left">
-                  <a href="#">
-                    <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
-                  </a>
-                </div>
-
-                <div class="media-body">
-                  <h4 class="media-heading">hmmm</h4>
-                  i'll make something cool i promise
-                </div>
-                <br><br>
-              </div>
-            </div>
+          <h1>contact</h2>
           </div>
         </section>
 
-        <section class="module parallax parallax-2">
+        <section class="module content">
           <div class="container">
-            <h1>contact</h2>
-            </div>
-          </section>
+            <h2>call me beep me if you wanna reach me</h2>
+            <p></p>
+          </div>
+        </section>
 
-          <section class="module content">
-            <div class="container">
-              <h2>call me beep me if you wanna reach me</h2>
-              <p></p>
-            </div>
-          </section>
-
-        </main><!-- /main -->
+      </main><!-- /main -->
 
 
-      </div><!-- /#wrapper -->
+    </div><!-- /#wrapper -->
 
-    </body>
-    </html>
+  </body>
+  </html>
